--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,27 +16,15 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %}
-
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
-        {% if site.show_downloads %}
-        <ul>
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
+        <img class="avatar rounded-2" 
+             src="https://avatars1.githubusercontent.com/u/5271523?s=400&amp;u=69d06c7014b70e7b5cff52cb316b8789866f7cc8&amp;v=4" 
+             width="200" height="200" alt="@elsap">
+        
+        <p>Hi! I'm Elis. I'm a Full Stack developer based in Bauru, São Paulo. I love cats and programming.
+          
+          <a href="www.blog.elissantis.me" target="_blank">blog</a> . 
+          <a href="www.github.com/elsap" target="_blank">github</a> .
+          <a href="www.twitter.com/e_lis" target="_blank">twitter</a>
       </header>
       <section>
 
@@ -44,9 +32,6 @@
 
       </section>
       <footer>
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
