--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,15 +14,17 @@
   <body>
     <div class="wrapper">
       <header>
-        <img class="avatar rounded-2" 
+        <div><img class="avatar" 
              src="https://avatars1.githubusercontent.com/u/5271523?s=400&amp;u=69d06c7014b70e7b5cff52cb316b8789866f7cc8&amp;v=4" 
              width="200" height="200" alt="@elsap">
+        </div>
         
-        <h3>Hi! I'm Elis. I'm a Full Stack developer based in Bauru, São Paulo. I love cats and programming.</h3>
+        <p>Hi! I'm Elis. I'm a Full Stack developer based in Bauru, São Paulo. I love cats and programming.</p>
           
           <p><a href="www.blog.elissantis.me" target="_blank">blog</a> . 
           <a href="www.github.com/elsap" target="_blank">github</a> .
-          <a href="www.twitter.com/e_lis" target="_blank">twitter</a></p>
+          <a href="www.twitter.com/e_lis" target="_blank">twitter</a> .
+          <a href="https://www.linkedin.com/in/elis-de-santis-a-offerni-7778bb75/" target="_blank">linkedin</a></p>
       </header>
       <section>
         
