--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,15 @@
       <section>
         
 
-      {{ content }}
+      <div id="rssincl-box-container-1181118"></div>
+<script type="text/javascript">
+(function() {
+  var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
+  s.src = 'http://output81.rssinclude.com/output?type=asyncjs&id=1181118&hash=275a947fc87cbd959a244aa865208e41';
+  document.getElementsByTagName('head')[0].appendChild(s);
+})();
+</script>
+
 
       </section>
       <footer>
