--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,10 +37,13 @@
       <script type="text/javascript">
       (function() {
         var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
-        s.src = 'http://output81.rssinclude.com/output?type=asyncjs&id=1181118&hash=275a947fc87cbd959a244aa865208e41';
+        s.src = 'http://output48.rssinclude.com/output?type=asyncjs&id=1181118&hash=275a947fc87cbd959a244aa865208e41';
         document.getElementsByTagName('head')[0].appendChild(s);
       })();
       </script>
+     
+        <p><a href="http://www.blog.elissantis.me">Read more</a></p>
+
 
 
       </section>
