--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,8 @@
           <a href="https://www.linkedin.com/in/elis-de-santis-a-offerni-7778bb75/" target="_blank">linkedin</a></p>
       </header>
       <section>
+        
+        <h3>Some blog entries</h3>
 
       <div id="rssincl-box-container-1181118"></div>
       <script type="text/javascript">
