--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@
         
         <p>Hi! I'm Elis. I'm a Full Stack developer based in Bauru, São Paulo. I love cats and programming.</p>
           
-          <p><a href="www.blog.elissantis.me" target="_blank">blog</a> . 
-          <a href="www.github.com/elsap" target="_blank">github</a> .
-          <a href="www.twitter.com/e_lis" target="_blank">twitter</a> .
+          <p><a href="http://www.blog.elissantis.me" target="_blank">blog</a> . 
+          <a href="http://www.github.com/elsap" target="_blank">github</a> .
+          <a href="http://www.twitter.com/e_lis" target="_blank">twitter</a> .
           <a href="https://www.linkedin.com/in/elis-de-santis-a-offerni-7778bb75/" target="_blank">linkedin</a></p>
       </header>
       <section>
