--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Sacramento');
+
+body {
+  font-family: Georgia, Times, "Times New Roman", serif;
+}
+
+.cursive-font {
+  font-family: 'Sacramento', cursive;
+}
+
 .avatar {
   -webkit-border-radius: 30px;
   border-radius: 30px;
