--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
       </header>
       <section>
         
-        <h3 class="cursive">Some blog entries</h3>
+        <h3 class="cursive-font">Some blog entries</h3>
 
       <div class="blog-entries">
         <div id="rssincl-box-container-1181118"></div>
