--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,7 +21,7 @@ body {
 .blog-entries {
   -webkit-border-radius: 10px;
   border-radius: 10px;
-  margin: 8px;
-  background-color: #eee;
+  padding: 4px;
+  background-color: #e1e1e1;
 }
 
