--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,7 +21,8 @@ body {
 .blog-entries {
   -webkit-border-radius: 10px;
   border-radius: 10px;
-  padding: 4px;
-  background-color: #e1e1e1;
+  padding: 8px;
+  background-color: #f1f1f1;
+  margin: 4px;
 }
 
