--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,14 +35,7 @@
         <h1 class="cursive-font">Some blog entries</h1>
 
       <div class="blog-entries">
-        <div id="rssincl-box-container-1181118"></div>
-        <script type="text/javascript">
-        (function() {
-          var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
-          s.src = 'http://output60.rssinclude.com/output?type=asyncjs&id=1181118&hash=275a947fc87cbd959a244aa865208e41';
-          document.getElementsByTagName('head')[0].appendChild(s);
-        })();
-        </script>
+        <script type="text/javascript" src="http://output51.rssinclude.com/output?type=js&amp;id=1181118&amp;hash=eb7a47ef9474885cf0bf24b0df5c3f45"></script>
       </div>
      
         <p><strong><a href="http://www.blog.elissantis.me">Read more</a></strong></p>
