--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         <p>Hi! I'm Elis. I'm a Full Stack developer based in Bauru, São Paulo. I love cats and programming.</p>
           
           <p><a href="mailto:hello@elissantis.me" target="_blank">email</a> . 
-          <p><a href="http://www.blog.elissantis.me" target="_blank">blog</a> . 
+          <a href="http://www.blog.elissantis.me" target="_blank">blog</a> . 
           <a href="http://www.github.com/elsap" target="_blank">github</a> .
           <a href="http://www.twitter.com/e_lis" target="_blank">twitter</a> .
           <a href="https://www.linkedin.com/in/elis-de-santis-a-offerni-7778bb75/" target="_blank">linkedin</a></p>
